--- a/docker/docker-compose-ca.yaml
+++ b/docker/docker-compose-ca.yaml
@@ -6,41 +6,75 @@
 version: '2'
 
 networks:
-  test:
+  shipping:
 
 services:
 
-  ca_org1:
+  ca_shipping:
     image: hyperledger/fabric-ca:$IMAGE_TAG
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-org1
+      - FABRIC_CA_SERVER_CA_NAME=ca-shipping
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=7054
     ports:
       - "7054:7054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/org1:/etc/hyperledger/fabric-ca-server
-    container_name: ca_org1
+      - /home/atri/workspace_hlf/shipping-network/organizations/shipping/fabric-ca:/etc/hyperledger/fabric-ca-server
+    container_name: ca_shipping
     networks:
-      - test
+      - shipping
 
-  ca_org2:
+  ca_custom:
     image: hyperledger/fabric-ca:$IMAGE_TAG
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-org2
+      - FABRIC_CA_SERVER_CA_NAME=ca-custom
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_PORT=8054
+      - FABRIC_CA_SERVER_PORT=7154
     ports:
-      - "8054:8054"
+      - "7154:7154"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/org2:/etc/hyperledger/fabric-ca-server
-    container_name: ca_org2
+      - /home/atri/workspace_hlf/shipping-network/organizations/custom/fabric-ca:/etc/hyperledger/fabric-ca-server
+    container_name: ca_custom
     networks:
-      - test
+      - shipping
+
+  ca_seller:
+    image: hyperledger/fabric-ca:$IMAGE_TAG
+    environment:
+      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
+      - FABRIC_CA_SERVER_CA_NAME=ca-seller
+      - FABRIC_CA_SERVER_TLS_ENABLED=true
+      - FABRIC_CA_SERVER_PORT=7254
+    ports:
+      - "7254:7254"
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
+    volumes:
+      - /home/atri/workspace_hlf/shipping-network/organizations/button.seller/fabric-ca:/etc/hyperledger/fabric-ca-server
+    container_name: ca_seller
+    networks:
+      - shipping
+      
+  ca_buyer:
+    image: hyperledger/fabric-ca:$IMAGE_TAG
+    environment:
+      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
+      - FABRIC_CA_SERVER_CA_NAME=ca-buyer
+      - FABRIC_CA_SERVER_TLS_ENABLED=true
+      - FABRIC_CA_SERVER_PORT=7354
+    ports:
+      - "7354:7354"
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
+    volumes:
+      - /home/atri/workspace_hlf/shipping-network/organizations/button.buyer/fabric-ca:/etc/hyperledger/fabric-ca-server
+    container_name: ca_buyer
+    networks:
+      - shipping
+
+
 
   ca_orderer:
     image: hyperledger/fabric-ca:$IMAGE_TAG
@@ -48,12 +82,12 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-orderer
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_PORT=9054
+      - FABRIC_CA_SERVER_PORT=8054
     ports:
-      - "9054:9054"
+      - "8054:8054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/ordererOrg:/etc/hyperledger/fabric-ca-server
+      - /home/atri/workspace_hlf/shipping-network/organizations/orderer/fabric-ca:/etc/hyperledger/fabric-ca-server
     container_name: ca_orderer
     networks:
-      - test
+      - shipping
